Fixed padding on mobile hero

--- a/themes/inbeat/assets/scss/pages/_home.scss
+++ b/themes/inbeat/assets/scss/pages/_home.scss
@@ -1,5 +1,5 @@
 #hero {
-    padding-top: 6.25rem;
+    padding-top: 12.5rem;
     padding-bottom: 6.25rem;
     text-align: center;
     @include breakpoint(sm) {
